# ms-speech-sys

./: .gitignore  CHANGELOG  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  rustfmt.toml
src/: api.rs  lib.rs  macros.rs  properties.rs
