[package]
name = "ms_speech_sys"
version = "0.1.1"
authors = ["Gary Hai <gary@neunit.com>"]
edition = "2018"
description = "Low level FFI bindings for Microsoft LUIS API."
readme = "README.md"
keywords = ["speech", "microsoft", "ai", "tts", "asr"]
categories = ["external-ffi-bindings"]
repository = "https://github.com/neunit/ms_speech_sys"
documentation = "https://docs.rs/ms_speech_sys"
license = "MIT"

[build-dependencies]
bindgen = "0.50.0"